[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/Class.gd" type="Script" id=1]

[node name="ClassPanel" type="Panel" groups=[
"Panel",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 2.0
margin/right = 179.0
margin/bottom = 16.0
text = "Class Name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="mouse_enter" from="." to="." method="_on_ClassPanel_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_ClassPanel_mouse_exit"]


